13156: Bugfix: Mobile web - uwp page button misaligned and overlapping animation

--- a/css/bottom-pages.css
+++ b/css/bottom-pages.css
@@ -4683,9 +4683,6 @@ a.opensource-icon-txt.coming-soon {
     vertical-align: initial;
     display: block;
 }
-.mobile-apps-button.uwp {
-    margin: 40px auto 0;
-}
 .uwp .advertise-chat .mobile-apps-button.red {
     margin: 24px 12px 24px 0;
 }
